sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: not found: value avance
    if (position ==0) {avance}
                       ^AlgGnomeSort:6: error: not found: value i
    if (plusPetit(i+1,i+2)) {i+=1}
                  ^AlgGnomeSort:6: error: not found: value i
    if (plusPetit(i+1,i+2)) {i+=1}
                      ^AlgGnomeSort:6: error: not found: value i
    if (plusPetit(i+1,i+2)) {i+=1}
                             ^AlgGnomeSort:7: error: not found: value i
    else {echange(i+2,i+1)
                  ^AlgGnomeSort:7: error: not found: value i
    else {echange(i+2,i+1)
                      ^AlgGnomeSort:8: error: not found: value i
         i-=1}
         ^