sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var position:Int=0
  while(position!=9) {
    if (position ==0) {avance}
    if (plusPetit(i+1,i+2)) {i+=1}
    else {echange(i+2,i+1)
         i-=1}
  }
}